blocks/cards/cards.css
/* stylelint-disable no-descending-specificity */
.section.cards-container.cards-grid {
  display: flex;
  flex-wrap: wrap;
  max-width: 990pt;
  margin: auto;
}

.section.cards-container.cards-grid .cards-wrapper {
  flex: 0 0 33.3333%;
}

.cards.full-width {
  --color-heading: var(--color-white) !important;
}

.cards.full-width.light {
  --color-heading: var(--color-primary-2) !important;
}

.cards > ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.cards > ul > li {
  position: relative;
  display: flex;
  flex-direction: column;
  flex: 1;
  padding: 32px;
  box-shadow: 0 0 4px 0 rgba(0 0 0 / 25%);
  background-color: var(--color-background);
}

.cards.primary > ul > li {
  border-radius: 16px;
  box-shadow: unset;
}

.cards.full-width > ul > li {
  background-color: var(--color-bg-tertiary);
  padding: 40px 24px;
}

.cards.full-width.light > ul > li {
  background-color: var(--color-background);
}

.cards.full-width > ul > li::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background-image: url('/icons/row-promo-banner-lines-mobile.svg');
  background-repeat: no-repeat;
  background-position: top right;
  opacity: 0.9;
  z-index: 1;
}

.cards.full-width.light > ul > li::before {
  filter: brightness(0) saturate(100%) invert(15%) sepia(83%) saturate(814%) hue-rotate(175deg) brightness(97%) contrast(92%);  /* Change image color to: #1A242B */
}

.cards.full-width > ul > li * {
  z-index: 2;
}

.cards > ul > li > .card-head .icon {
  width: 100%;
  height: 164px;
}

.cards.cards.full-width > ul > li > .card-head .icon {
  height: auto;
}


.cards > ul > li > .card-head .icon img {
  object-fit: contain;
}

.cards > ul > li > .card-body {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  flex: 1;
}

.cards.cards.full-width > ul > li > .card-body {
  align-items: flex-start;
}

.cards.primary > ul > li > .card-body {
  margin-top: 10px;
}

.cards > ul > li > .card-body > .card-section {
  display: flex;
  flex-direction: column;
}

.cards > ul > li > .card-body > .card-section:last-child {
  height: 100%;
}

.cards.full-width > ul > li > .card-body > .card-section :is(h1, h2, h3, h4, h5, h6) {
  color: var(--color-heading);
  margin-bottom: 8px;
}

.cards > ul > li > .card-body > .card-section > p {
  margin-bottom: 24px;
}

.cards > ul > li > .card-body > .card-section > p:last-child {
  margin: 0;
  text-align: center;
}

.cards > ul > li > .card-body > .card-section > p.button-container:last-child {
  flex: 0;
  margin-top: auto;
}

.cards:not(.full-width) > ul > li > .card-body > .card-section > p.button-container > * {
  display: flex;
  justify-content: center;
}

.cards.full-width > ul > li > .card-body > .card-section > p:not(.button-container) {
  color: var(--color-white);
  letter-spacing: 0.16px;
}

.cards.full-width.light > ul > li > .card-body > .card-section:not(.button-container) > p {
  color: var(--color-text-primary);
}

.cards.primary > ul > li > .card-body > .card-section > p {
  text-align: center;
}

.cards.primary > ul > li > .card-body > .card-section:last-of-type > p {
  letter-spacing: 0.16px;
}

.cards.primary > ul > li > .card-body > .card-section:first-of-type > p {
  color: var(--color-grey500);
  font-size: var(--body-font-size-default);
  font-weight: var(--font-weight-regular);
  line-height: 160%;
  letter-spacing: 0.16px;
  padding-top: 12px;
  margin: 0;
}

.cards.primary > ul > li > .card-body > .card-section:first-of-type > h2 {
  font-weight: 600;
  line-height: 120%;
  letter-spacing: 0.32px;
  margin-bottom: 8px;
}

.cards.primary:not(.navy-headings) > ul > li > .card-body > .card-section:first-of-type > h2 {
  --color-heading: var(--color-text-primary);
}

.cards.primary > ul > li > .card-body > .card-section:first-of-type > p:first-of-type {
  font-size: var(--body-font-size-s);
  font-weight: 900;
  line-height: 120%;
  letter-spacing: 1.4px;
  text-transform: uppercase;
}

.cards > ul > li > .card-body > .card-section > p.button-container {
  margin: 0;
}

.cards > ul > li > .card-body > .card-section > p.button-container a {
  margin-top: 0;
}

.cards.cards.full-width > ul > li > .card-body > .card-section > p.button-container a {
  margin: 0;
}

.cards > ul > li > .card-body > .card-section > p.button-container:last-child a.button {
  padding: .5rem 2rem;
  background-color: var(--color-button-primary);
  border: none;
  color: var(--color-text-primary);
  border-radius: 100px;
}

.cards > ul > li > .card-body > .card-section > p.button-container:last-child a.button:hover {
  outline: 3px solid var(--color-black);
}

.cards.full-width > ul > li > .card-body > .card-section.button-container a.button.primary {
  outline: 1px solid #1A242B;
  margin: 32px 0 0;
}

.cards.full-width > ul > li > .card-body > .card-section.button-container a.button.primary:hover {
  outline: 3px solid var(--color-black);
}

.cards.full-width.light > ul > li > .card-body > .card-section.button-container a.button.primary {
  outline: 1px solid var(--color-grey200);
}

.cards.full-width.light > ul > li > .card-body > .card-section.button-container a.button.primary:hover {
  outline: 3px solid var(--color-black);
}

.cards > ul > li > .card-body > .card-section > .button-container a.button .icon {
  margin: 0;
}


.cards > ul > li > .card-body > hr {
  margin: 1rem auto;
  border: 0.5px solid #b2b1b1;
  opacity: .25;
  color: inherit;
  width: 124px;
}

.section.cards-container.list-styles ul {
  position: relative;
  padding: 0;
  margin: 0 0 0 1.5rem;
  list-style: none;
}

.section.cards-container.list-style-checkmarks ul {
  margin: 0;
}

.section.cards-container.list-style-checkmarks .cards > ul > li {
  padding-left:  calc(1.5rem * 0.5);
}

.section.cards-container.list-style-checkmarks .cards h6 {
  margin: 1.5rem 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.section.cards-container.list-style-checkmarks .cards h6 + ul > li {
  margin-bottom: 1rem;
}

.section.cards-container.list-style-checkmarks div.card-body ul > li::before {
  content: '✓';
  height: 1.25rem;
  width: 1.25rem;
  margin-right: 1rem;
}

.section.cards-container.heading-image-row .card-head .card-section {
  display: flex;
  flex-direction: row;
  align-items: center;
}


.section.cards-container.heading-image-row .card-head .card-section h3 {
  order: 1;
  margin-left: 20px;
}

.section.cards-container.heading-image-row .card-head .card-section p:has(picture) {
  width: 10%;
}

.section:not(.gray-background) .cards.primary > ul > li {
  border: 1px solid var(--color-grey200);
  box-shadow: 0 8px 8px 0 color(rgba 33 33 33 / 2%),
    0 5px 5px 0 color(rgba 33 33 33 / 4%),
    0 3px 3px 0 color(rgba 33 33 33 / 6%),
    0 1px 1px 0 color(rgba 33 33 33 / 8%),
    0 0 0 0 color(rgba 33 33 33 / 10%);

}

.cards.full-width > ul > li > .card-head .icon > img {
  width: 20.16px;
  height: 20.16px;
  object-fit: cover;
  margin-bottom: 3.61px;
}

.cards.full-width > ul > li > .card-body > .card-section > p {
  text-align: left;
}

.cards.full-width.light > ul > li > .card-head .icon > img {
  filter: brightness(0) saturate(100%) invert(15%) sepia(83%) saturate(814%) hue-rotate(175deg) brightness(97%) contrast(92%);  /* Change image color to: #1A242B */
}

.block.cards.primary .icon {
  text-align: center;
}

.block.cards.primary .icon img {
  width: 157.091px;
  height: 64px;
}

@media (min-width: 992px /* breakpoint-l */) {
  main .section.narrow.cards-container {
    max-width: 1400px;
  }

  main .section.narrow.cards-container > .cards-wrapper {
    padding: 0;
    margin: 80px;
  }

  .cards > ul {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
  }

  /* full width style */

  .cards.full-width > ul {
    flex-direction: column;
  }

  .cards.full-width > ul > li {
    flex-direction: row;
    align-items: center;
    gap: 32px;
    padding: 64px 80px;
  }

  .cards > ul > li {
    min-width: 200px;
    padding: 24px;
  }

  .cards.full-width > ul > li::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url('/icons/row-promo-banner-lines.svg');
    background-repeat: no-repeat;
    background-position: top left;
    opacity: 0.9;
    z-index: 1;
  }

  .cards.full-width > ul > li > .card-body {
    position: relative;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    flex: unset;
  }

  .cards.full-width > ul > li > .card-body > .card-section {
    max-width: 715px;
    flex: unset;
  }

  .cards.full-width > ul > li > .card-body > .card-section:not(.button-container) {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 24px;
    max-width: 100%;
    margin: 0;
  }

  .cards.full-width > ul > li > .card-body > .card-section > p {
    display: flex;
    align-items: center;
    max-width: 715px;
    margin: 0;
  }

  .cards.full-width > ul > li > .card-body > .card-section.button-container {
    justify-content: center;
  }

  .cards.full-width > ul > li > .card-head .icon > img {
    width: 99px;
    height: 99px;
    object-fit: cover;
  }

  .cards.full-width > ul > li > .card-body > .card-section > p.button-container:last-child {
    flex: 1;
    margin: 0;
    padding: 0;
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
  }

  .cards.full-width > ul > li > .card-body > .card-section.button-container a.button.primary {
    margin: 0;
  }
}

